--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
 </div>
 
-<div class="w3-container w3-grey">
+<div class="w3-container w3-white">
   <h2>London</h2>
   <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
 </div>
