--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" >
 <body>
 
 <div class="w3-container">
@@ -30,7 +30,7 @@
   <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
 </div>
 
-<div class="w3-container w3-white">
+<div class="w3-container w3-green">
   <h2>London</h2>
   <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
 </div>
