--- a/index.html
+++ b/index.html
@@ -5,35 +5,24 @@
 <link rel="stylesheet" >
 <body>
 
-<div class="w3-container">
-  <h1>Background Colors</h1>
-  <p>The w3-color classes defines background colors for HTML elements:</p>
-</div>
+  <h1>This is a heading.</h1>
+  <p>
+   <q>If you tell the truth, you don't have to remember anything.</q>
+    ― Mark Twain
+  </p>
+  <template>
+    <h2>This is a second heading.</h2>
+    <p>
+      “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
+      ― Marilyn Monroe
+    </p>
+  </template>
 
-<div class="w3-container w3-red">
-  <h2>London</h2>
-  <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
-</div>
-
-<div class="w3-container w3-teal">
-  <h2>London</h2>
-  <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
-</div>
-
-<div class="w3-container w3-yellow">
-  <h2>London</h2>
-  <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
-</div>
-
-<div class="w3-container w3-gray">
-  <h2>London</h2>
-  <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
-</div>
-
-<div class="w3-container w3-green">
-  <h2>London</h2>
-  <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
-</div>
-
+  <h1>Página A</h1>
+<h1>Página A</h1>
+<h1>Página A</h1>
+<h1>Página A</h1>
+<h1>Página A</h1>
+<h1>Página A</h1>
 </body>
 </html> 
