Cambie un parrafo
por que puedo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <h1>This is a heading.</h1>
   <p>
-   <q>If you tell the truth, you don't have to remember anything.</q>
+   <q>Por que puedo y mas.</q>
     ― Mark Twain
   </p>
   <template>
